--- a/assets/.htaccess
+++ b/assets/.htaccess
@@ -3,6 +3,24 @@
     AddType 'text/html; charset=UTF-8' html    
     AddType image/webp .webp
 
+    # BEGIN Cache-Control Headers
+    <IfModule mod_headers.c>
+    <FilesMatch "\.(ico|jpe?g|png|gif|swf|css|gz)$">
+    Header set Cache-Control "max-age=2592000, public"
+    </FilesMatch>
+    <FilesMatch "\.(js)$">
+    Header set Cache-Control "max-age=2592000, private"
+    </FilesMatch>
+    <filesMatch "\.(html|htm)$">
+    Header set Cache-Control "max-age=7200, public"
+    </filesMatch>
+    # Enleve le cache pour les ressources dynamiques
+    <FilesMatch "\.(pl|php|cgi|spl|scgi|fcgi)$">
+    Header unset Cache-Control
+    </FilesMatch>
+    </IfModule>
+    # END Cache-Control Headers
+    
 <IfModule mod_expires.c>
           ExpiresActive on
           ExpiresByType image/jpg "access plus 20 days"
@@ -14,4 +32,4 @@
           ExpiresByType text/css "access plus 1 week"
           ExpiresByType application/x-javascript "access plus 1 week"
           ExpiresByType application/javascript "access plus 1 week"
-</IfModule>
+</IfModule> 
