--- a/assets/.htaccess
+++ b/assets/.htaccess
@@ -5,7 +5,7 @@
 
     # BEGIN Cache-Control Headers
     <IfModule mod_headers.c>
-    <FilesMatch "\.(ico|jpe?g|png|gif|swf|css|gz)$">
+    <FilesMatch "\.(ico|jpe?g|png|gif|swf|css|gz|webp)$">
     Header set Cache-Control "max-age=2592000, public"
     </FilesMatch>
     <FilesMatch "\.(js)$">
@@ -20,7 +20,7 @@
     </FilesMatch>
     </IfModule>
     # END Cache-Control Headers
-    
+
 <IfModule mod_expires.c>
           ExpiresActive on
           ExpiresByType image/jpg "access plus 20 days"
